further nc edits

--- a/content/post/2021-07-23-introducing-the-redwall-red-flag-analyzer-with-new-constructs-data/index.Rmd
+++ b/content/post/2021-07-23-introducing-the-redwall-red-flag-analyzer-with-new-constructs-data/index.Rmd
@@ -8,7 +8,6 @@ draft: true
 slug: introducing-the-redwall-red-flag-analyzer-with-new-constructs-data
 ---
 
-
 [![Red Flag Explorer](images/red_flag_app.png){width="12in" height="6in"}](https://luceyda.shinyapps.io/redflagapp/)
 
 ```{css include=FALSE}
@@ -27,7 +26,11 @@ slug: introducing-the-redwall-red-flag-analyzer-with-new-constructs-data
 
 <details>
 
-<summary> Click to see R set-up code </summary>
+<summary>
+
+Click to see R set-up code
+
+</summary>
 
 ```{r 'set-up', echo=TRUE, message=FALSE, warning=FALSE}
 # Libraries
@@ -60,11 +63,18 @@ annual_data <-
 
 </details>
 
+# Key Findings {#key_findings}
+
+-   1999-2000 was an exceptional period for "Red Flag" prevalence and return differentiation, though apparent benefits of the strategy appear in most periods.
+-   About 2.5% of companies we checked had 5 or more "Red Flags" among annual and quarterly filings, so sparsity is challenge in estimating true relative returns.
+-   Finding price histories for de-listed companies in open source channels is an challenge, which likely creates "survivor bias" in relative return estimates.
+-   Prevalence of accounting distortion declined considerably since 1999-2000.
+
 # Introduction {#introduction}
 
 A few months ago in [A Blueprint of "Red Flag" alerts Using Adjusted Earnings Data](https://redwallanalytics.com/2021/04/21/a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/), we mused about using [New Constructs](https://www.newconstructs.com) historical data to back-test ideas from a 2003 CFA Conference Proceedings article entitled [Revelations in Financial Reporting](https://www.tandfonline.com/toc/ufaj20/current) by Bruce Gulliver. This article succinctly offered the theory that, in the aftermath of the collapse of "Dot-com Bubble", impending losses for many stocks might have been avoided by using a simple set of financial statement ratios, collectively as "red flags". Mr. Gulliver's work always stuck with us, and especially now that R can easily be used to test the hypothesis and to take the analysis to a different scale and interactivity. The only other missing piece would be thousands of companies with consistently and meticulously adjusted financial statement data over a very long period, which as far as we know, only resides at New Constructs.
 
-After our blog post, New Constructs kindly offered to let us use their data to test the theory on a large sample of companies and over the last twenty years, which includes two of the great stock market busts and the recent CV-19 related volatility. In this post, we will describe our analysis, summarize the benefits of the unparalleled New Constructs data and the interactive [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/) Shiny app we have built for anyone who would like to interact with the "red flags" and measure their performance. 
+After our blog post, New Constructs kindly offered to let us use their data to test the theory on a large sample of companies and over the last twenty years, which includes two of the great stock market busts and the recent Covid-19 related volatility. In this post, we will describe our analysis, summarize the benefits of the unparalleled New Constructs data and the interactive [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/) Shiny app we have built for anyone who would like to interact with our derived "red flags" and measure their performance.
 
 It is striking that analysis on this scale (ie: analyzing \~145,000 financial statements), impossible for a regular person with a computer to produce (much less share with others) for most of our years following markets, can now be conducted in a few weeks of coding. We think our "red flags" built on top of New Construct's data represent a unique historical fingerprint of the market's reaction to accounting disclosures in the controversial post-2000 period.
 
@@ -80,17 +90,21 @@ The methodology for generating "red flags" was close to what we laid out in [A B
 
 -   The [High Valuation]{.ul} "red flag" was calculated using New Construct's valuation-based Stock ratings (FCF Yield, Price-to-Economic Book Value and Market Implied Growth Appreciation Period), themselves derived variables, rather than raw valuation metrics. New Constructs does not use the traditional GAAP earnings and book value ratios pointed to in *Revelations* to determine valuation, for reasons very well discussed in the [Basic Metrics](https://www.newconstructs.com/education/basic-metrics/) section on New Construct's website.
 
--   We don't know what Mr. Gulliver would have used, but the cutoff for "high" [Earnings Distortion]{.ul} was set for cases where New Constructs' calculated "divergence" of core from reported earnings simultaneously greater than 1% of assets [and]{.ul} 10% of earnings, which varied over the time period, but yielded "red flags" in 12% of filings.
+-   We don't know what Mr. Gulliver would have used, but we defined "high" [Earnings Distortion]{.ul} as an equal aggregation of the highest divergence of NC adjusted from reported net earnings divided by market capitalization and the absolute value of total earnings.
 
 -   For [liquidity]{.ul}, we first screened that a company did not have "excess cash", a New Constructs derived variable measuring the amount of cash over and above what was needed to conduct operations. If the company did not have "excess cash", we then used several credit metrics similar to those discussed in *Revelations*, but using the comparative New Construct's derived financial statement items.
 
 -   We also added two additional "red flags" of our own, for companies having amended filings (by far the least common "red flag") and with more than two flags previously still showing filing-on-filing increases in total flags.
 
-We don't know what thresholds Mr. Gulliver would have used in his analysis, but where we had discretion, our "red flags" were calibrated to occur in about 15-20% of filings over the "whole period" (as shown in Figure \@ref(fig:red-flag-summary-chart) below). When we say "over the whole period", this is significant because it means that the cut-offs for a "red flag" is the same regardless of the reporting period. Another option would have been to calculate by period (ie: attributing a similar number of each red flag in each period), but that would have taken away the ability to compare behavior over time. There was no special knowledge consideration given to an "informed" threshold level where evidence supported likely problems, just that the selected metric was deviating negatively relative to the large majority of filings during the 20-year period. Further work in this regard might even improve the quality of the signalling.
+We don't know what thresholds Mr. Gulliver would have used in his analysis, but where we had discretion, our "red flags" were calibrated to occur in about 20% of filings over the "whole period" (as shown in Figure \@ref(fig:red-flag-summary-chart) below). When we say "over the whole period", this is significant because it means that the cut-offs for a "red flag" is the same regardless of the reporting period. Another option would have been to calculate by period (ie: attributing a similar number of each red flag in each period), but that would have taken away the ability to compare behavior over time. There was no special knowledge consideration given to an "informed" threshold level where evidence supported likely problems, just that the selected metric was deviating negatively relative to the large majority of filings during the 20-year period. Further work in this regard might even improve the quality of the signalling.
 
 <details>
 
-<summary> Click to see R plot code </summary>
+<summary>
+
+Click to see R plot code
+
+</summary>
 
 ```{r 'red-flag-summary-code', message=FALSE, warning=FALSE}
 
@@ -215,7 +229,11 @@ When we matched companies with returns, we used a "rolling join" on ticker and d
 
 <details>
 
-<summary> Click to see R table code </summary>
+<summary>
+
+Click to see R table code
+
+</summary>
 
 ```{r 'return-coverage-code', message=FALSE, warning=FALSE}
 
@@ -254,12 +272,15 @@ dt <-
 dt
 ```
 
-
 Figure \@ref(fig:return-coverage-table) above shows the percentage of companies matched with returns over time, similar to Figure \@ref(fig:red-flag-summary-chart) earlier. We were able to download and match returns for just over half of the stocks covered by New Constructs in the earlier periods, but a much higher rate in the later years. In the end, we have return data to go along with filings for almost 5,000 distinct companies, but were unable to match approximately 12,000 of the 67,000 annual reports. While we do have all the needed return data for many 2020 filings, the absolute number is lower because of the need to look ahead to calculate returns. We had significantly greater success matching quarterly reports, because those only started in a later period (around 2012 when New Constructs began providing them) when we had more complete pricing data.
 
 <details>
 
-<summary> Click to see R plot code </summary>
+<summary>
+
+Click to see R plot code
+
+</summary>
 
 ```{r 'summary-return-code', message=FALSE, warning=FALSE}
 
@@ -379,43 +400,42 @@ Figure \@ref(fig:summary-return-chart) above shows the median returns for all co
 
 All in all, we collected almost 4 million weekly prices for 5,000 unique companies, and calculated the comparative log returns relative to the Vanguard Total Market Index fund ("TMI") over the subsequent 1 through 13 quarters after every filing date. As shown in Figure \@ref(fig:return-coverage-table) above, we were able to match several thousand stocks covered by New Constructs in most years. We expect that across all the periods and companies, the aggregated relative returns by "red flag" group (as shown in the "Summary Returns" table and "Returns over Time" chart on [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/)), should be representative, though not precise, picture of the true returns for companies with those attributes. The bands for higher "red flag" groups will always have greater uncertainty, because there are so many fewer companies as the number of flags increase.
 
-The group of companies unmatched to returns is especially unfortunate, because, as shown in Figure \@ref(fig:red-flag-summary-chart), aggressive accounting and other risky behaviors appear to have been most common between 2000-2005. During that period, many of our "red flags" occurred in 20-30% of filings, and a much larger number of reports had to be amended. It is likely that companies which went out of business (ceasing to generate pricing data), also would have had more warning signs, and thus, have been most relevant to our analysis. In fact, in a list of 38 the most notorious companies we could think of (ie: Enron, Worldcom, etc.), our pricing sources were missing for 10, a much higher rate missing than the overall average. To further confirm this expectation, the average number of "red flags" in unmatched companies in the annual data and quarterly data was 1.7 and 1.5, respectively, compared to 1.4 and 1.2 in the matched group. As a result, we expect "survivor bias" to make our estimated returns for higher "red flag" groups somewhat less bad than they otherwise would have been.
-
+The group of companies unmatched to returns is especially unfortunate, because, as shown in Figure \@ref(fig:red-flag-summary-chart), aggressive accounting and other risky behaviors appear to have been most common between 2000-2005. During that period, many of our "red flags" occurred in 20-30% of filings, and a much larger number of reports had to be amended. Briefly in 1999-2000, earnings distortion occurred in well over 30% of companies. It is likely that companies which went out of business (ceasing to generate pricing data), also would have had more warning signs, and thus, have been most relevant to our analysis. In fact, in a list of 38 the most notorious companies we could think of (ie: Enron, Worldcom, etc.), our pricing sources were missing for 10, a much higher rate missing than the overall average. To further confirm this expectation, the average number of "red flags" in unmatched companies in the annual data and quarterly data was 1.7 and 1.5, respectively, compared to 1.4 and 1.2 in the matched group. As a result, we expect "survivor bias" to make our estimated returns for higher "red flag" groups somewhat less bad than they otherwise would have been.
 
 # Using the Shiny App {#using-the-shiny-app}
 
-The triple horizontal line icon at the top left of [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/), opens a menu which allows the user to change any of the input fields. Changing any of the inputs alters the data viewed for all of the tables and charts displayed when the app loads and on the tabs. The "View" switch allows to toggle between 67,000 annual and 78,500 quarterly filings. All annual filings are included as the fourth quarter in the quarterly data set. It should be noted that the same flag on the same filing, for a company and period, might differ between our annual and quarterly calculations. This is because flags are calculated with reference only to the other filings of the same group (ie: annual or quarterly). It is possible to filter by sector or by selecting a customized group of companies. In a future post, we plan to set up a filter on the app to allow users to see groups of interesting companies (ie: past accounting scandals, meme stocks, companies included for all periods). 
+The triple horizontal line icon at the top left of [Red Flag Explorer](https://luceyda.shinyapps.io/redflagapp/), opens a menu which allows the user to change any of the input fields. Changing inputs alters the data viewed for all of the tables and charts displayed when the app loads. The "View" switch allows to toggle between 67,000 annual and 78,500 quarterly filings. All annual filings are included as the fourth quarter in the quarterly data set. It should be noted that the same flag on the same filing, for a company and period, might differ between our annual and quarterly calculations. This is because flags are calculated with reference only to the other filings of the same group (ie: annual or quarterly). It is possible to filter by sector or by selecting a customized group of companies. In a future post, we plan to set up a filter on the app to allow users to see groups of interesting companies (ie: past accounting scandals, meme stocks, companies included for all periods).
 
-The "Returns over Time" tab shows the evolution of returns by number of red flags over time. It should be noted that when a flag group had a median decline greater than 50%, we truncated it to 50% in order to maintain the chart scaling among the other groups. There are generally only a small number of companies in the groups with such large declines. It is also possible to choose a selection of companies, but "Returns over Time" for a group loses its meaning if there are too few items, because the same company will most likely fall into multiple "red flag" groups over time. If the selection is small enough, there might not even be a single data point for a higher number of flags in a given year, and as a result, there may be an extended time difference between two points when there were no members of that group between those periods (usually 5+ flags in a period).
+The "Returns over Time" tab shows the evolution of returns by number of red flags over time. It should be noted that when a flag group had a median decline greater than 50%, we truncated it to 50% in order to maintain the chart scaling among the other groups. There are generally only a small number of companies in the groups with such large declines. It is also possible to choose a selection of companies, but "Returns over Time" for a group loses its meaning if there are too few items, because the same company will most likely fall into multiple "red flag" groups over time. If the selection is small enough, there might not even be a single data point for a higher number of flags in a given year, and as a result, there may be an extended time difference between two points when there were no members of that group between those periods (usually more than five flags in a period).
 
-When the app loads, it shows the aggregate of all 13 quarterly return periods, but most of these periods encompass each other (ie: the one quarter return is part of the two quarter return, etc.). We have observed that it isn't easy to see the contrast of flag groups when the quarterly returns are only a quarter or two, so we recommend 4- or 6-quarters, but were unable to hard code this as a starting point into the app menu. The quarterly data set does not show returns beyond eight quarters, and though the annual data set shows up to 13 quarters, using this many will result in the loss of data in 2020 and 2021 (because we have to leave that much lead time). 
+When the app loads, it shows the aggregate of all 13 quarterly return periods, but most of these periods encompass each other (ie: the one quarter return is part of the two quarter return, etc.). We have observed that it isn't easy to see the contrast of flag groups when the quarterly returns are only a quarter or two, so we recommend 4- or 6-quarters, but were unable to hard code this as a starting point into the app menu. The quarterly data set does not show returns beyond eight quarters, and though the annual data set shows up to 13 quarters, using this many will result in the loss of data in 2020 and 2021 (because we have to leave more lead time to calculate in those cases).
 
-The "Flags Counts" tab shows the descriptions and counts of all "red flags" in the filtered selection. As mentioned earlier, most flags occur in approximately 15-20% of the cases, so seeing more than a few tends to be the exception. The number of unique companies included in the "red flag" group is a more important indicator than the number of reports, and when looking at just one return period, this number should be pretty close to the number of reports unless an unusually long quarterly return period is selected. Lastly, the "Counts over Time" tab shows the percentage of filings with that "red flag" during that period. Because "red flags" are calculated relative to the whole 20-year period, they are not evenly distributed by year. This offers an objective perspective on how behavior in a given period is, and as mentioned earlier, the early period in the chart has by far the most red flags.
+The "Flags Counts" tab shows the descriptions and counts of all "red flags" in the filtered selection. As mentioned earlier, most flags occur in approximately 20% of the cases, so seeing more than a few tends to be the exception. The number of unique companies included in the "red flag" group is a more important indicator than the number of reports, and when looking at just one return period, this number should be pretty close to the number of reports unless an unusually long quarterly return period is selected. Lastly, the "Counts over Time" tab shows the percentage of filings with that "red flag" during that period. Because "red flags" are calculated relative to the whole 20-year period, they are not evenly distributed by year to offer an objective perspective on how behavior in a given period is. As discussed above, the early period in the chart has by far the most red flags, and in recent times, most groups haven't come close to matching those levels.
 
 # Cursory Analysis {#cursory-analysis}
 
-The beauty of our Shiny app is that we are able leave it for the user to explore the inputs and to test sensitivity of "red flags" to performance for themselves. No locked data with p-values here, and the derived "red flags" (not New Construct's raw data) will be available for others to test. In aggregate, considering all periods, we observe that median group relative returns appear to be more stable and higher when the number of "red flags" is below 2-3, but generally seem to fall off proportionally as flags rise. There are naturally a lot fewer filings in higher flag groups, and as mentioned earlier, aggregate relative returns are much more uncertain and become considerably more volatile with a higher number of flags. 
+The beauty of our Shiny app is that we are able leave it for the user to explore the inputs and test sensitivity of "red flags" to performance for themselves. No locked data with p-values here, and the derived "red flags" (not New Construct's raw data) will be available for others to test. In aggregate, considering all periods, we observe that median group relative returns appear to be more stable and higher when the number of "red flags" is below 2-3, but generally seem to fall off proportionally as flags rise. There are naturally a lot fewer filings in higher flag groups, and as mentioned earlier, aggregate relative returns are much more uncertain and become considerably more volatile with a higher number of flags.
 
 In the first few periods, most red flag groups outperform the TMI, but after 2003-04, almost all seem to under-perform, which we struggle to explain. The TMI has a lot of stocks in it and should be less dominated by high market capitalization companies. We would expect the stocks doing better and worse than the index in any period, to cancel each other out in aggregate. If anything, it seems like our process for collecting returns would be biased towards companies which did well, so we might expect our average returns to do better than the TMI if anything.
 
-In the year 1999 (the beginning of our data) and for a few years after, there was a much more significant number of companies with 5-7 "red flags", and their under-performance was striking relative to the lower flag groups. Also after 2005, the difference in median and mean relative returns between higher and lower flag groups seems to become smaller. We recall the post technology bubble period as being a golden age of stock picking. Certainly, when Mr. Gulliver wrote his piece in 2003, the case for indexing wasn't as strong as it has become today. Maybe more market observers took note than we might have thought and arbitraged some of these effects away. Interestingly, 2020 seems to be the only year when everything actually reversed, and high flag actually outperformed both the TMI and lower flag groups.
+In the year 1999 (the beginning of our data) and for a few years after, there was a much more significant number of companies with 5-7 "red flags", and their under-performance was striking relative to the low flag groups. Also after 2005, the difference in median and mean relative returns between higher and lower flag groups seems to become smaller. We recall the post technology bubble period as being a golden age of stock picking. Certainly, when Mr. Gulliver wrote his piece in 2003, the case for indexing wasn't as strong as it has become today. Maybe more market observers took note than we might have thought and arbitraged some of these effects away. Interestingly, 2020 seems to be the only year when everything reversed, and high flag actually outperformed both the TMI and lower flag groups.
 
 The separation among groups by number of flags tends to be persistent for most sectors, though seems a little more visible in cyclical sectors. This may be because the several of the more cyclical "red flags" (such as Margins & ROIC and Days of Inventory & Receivables) affect those sectors more and may allow for greater contrast. Some "red flag" groups which were prominent early on, such as "Earnings Distortion" and "Amendments", mostly trended lower, while the prevalence of "Asset Turnover" warnings increased steadily over the period.
 
 # Thoughts about Data and Modeling {#modeling-and-data-thoughts}
 
-The model proposed by *Revelations* was rules-based, aggregating a large number of weak boolean signals. It's power comes from simplifying and systematically taking more elements over a larger number of companies than most single analysts might consider at the same time. By collapsing the financial ratios down into boolean indicators using somewhat arbitrarily thresholds, we lose a lot of data and are less able to allow variables to interact. We are also treating all of variables equally, when some may be more important, or may have greater importance in combination with others. New Constructs was kind enough to share their data, but that was on a temporary basis, so this is beyond what we can achieve in this project, but taking these into account might give a even better signal of future performance.
+The model proposed by *Revelations* was rules-based, aggregating a large number of weak boolean signals. It's power comes from simplifying and systematically taking more elements over a larger number of companies than most single analysts might consider at the same time. By collapsing the financial ratios down into boolean indicators using arbitrarily thresholds, we lose a lot of data and are less able to allow variables to interact. We are also treating all of variables equally, when some may be more important, or may have greater importance in combination with others. New Constructs was kind enough to share their data, but that was on a temporary basis, so this is beyond what we can achieve in this project, but taking these into account might give a even better signal of future performance.
 
 In addition to the problem with sparsity among the higher flag groups, it isn't clear if the relationship between the number of flags and relative returns should be linear, and the few very filings with a high number of flags seemed to have more than a linear impact. The statistical modeling tools we have learned so far rely on finding a few highly significant numeric variables, so we are not sure how to model when the signal derives from the sum of many weak variables.
 
-The nature of the data is also a consideration. We would like to measure the true impact of individual or collection of flags. The challenge is the longitudinal nature of the data, and the related sparsity of high flag data by period. This is a situation may be best addressed with a Bayesian mixed-effects model, which might allow us to get a more confident posterior estimate for the sparse flag groups by taking into account measurements from other periods and helping to gauge our confidence in the differences of means of the "red flag" groups. This is something we may attempt in the future.
+The nature of the data is also a consideration. We would like to measure the true impact of an individual or collection of flags. The challenge is the longitudinal nature of the data, and the related sparsity of high flag data by period. This is a situation may be best addressed with a Bayesian mixed-effects model, which might allow us to get a more confident posterior estimate for the returns of the sparse flag groups, by taking into account measurements from other periods and helping to gauge our confidence in the differences of means of the "red flag" groups. This is something we may attempt in the future.
 
 # Next Steps {#next-steps}
 
-There are so many possible next steps it is difficult to know where to start. The first place would be to find the price histories for the missing 1,600 companies, preferably adjusted closing prices. We have included mainly accounting ratios in our analysis so far, but we could also easily add variables from other data sources, such as NLP signals such as sentiment of the MD&A, management incentive alignment measures, short interest ratios or insider selling. At the moment out of almost 145,000 filings, we found only about 1% with five or more "red flags" among the annual and quarterly data, so the contrast among groups might increase further if we to took into consideration more risk factors. With our code in an R `{targets}` project, any of these additions would only a short time to add to the app, so the whole project becomes a living document.
+There are so many possible next steps it is difficult to know where to start. The first place would be to find the price histories for the missing 1,600 companies, preferably adjusted closing prices. We have included mainly accounting ratios in our analysis so far, but we could also easily add variables from other data sources, such as NLP signals like the sentiment of the MD&A, management incentive alignment measures, short interest ratios or insider selling. At the moment out of almost 145,000 filings, we found only about 2.5% with five or more "red flags" among the annual and quarterly data, so the contrast among groups might increase further if we to took into consideration more risk factors. With our code in an R `{targets}` project, any of these additions would only a short time to add to the app, so the whole project becomes a living document.
 
 In our next blog post in this series, we plan to add a series of filters of several themes including: notorious accounting collapses, meme stocks, high internally-generated intangible and companies which were present over the whole period. We might add some more visualizations to the app to enable users to explore these filters. Finally, we may attempt to build the hierarchical, longitudinal mixture model as described above in order to better estimate the true means of the returns of the "red flag" groups.
 
 # Conclusion {#conclusion}
 
-When we wrote [A Blueprint of "Red Flag" alerts Using Adjusted Earnings Data](https://redwallanalytics.com/2021/04/21/a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/), it felt like our proposal was out on a limb compared to what might be achievable. Thanks to the generosity of New Constructs and the powers of R, we have taken a long-held personal research question, and built a working prototype which we can share with others and possibly add to over time. It is possible that the shrinkage of the "red flag" return spread may be an indication that others have already done this, but if it exists, we haven't seen that work. We plan to include the code for our calculations and Shiny app, and the derived "red flag" data on Github. Our work is only a back-test, so we encourage others to subscribe to New Constructs API and their real time data to mine for accounting troubles.
+When we wrote [A Blueprint of "Red Flag" alerts Using Adjusted Earnings Data](https://redwallanalytics.com/2021/04/21/a-blueprint-of-red-flag-alerts-using-adjusted-earnings-data/), it felt like our proposal was out on a limb compared to what might be achievable. Thanks to the generosity of New Constructs and the powers of R, we have taken a long-held research question, and in our Shiny app, built a working prototype which we can share with others and add to over time. It is possible that the shrinkage of the "red flag" return spread may be an indication that others have already done this, but if it exists, we haven't seen that work. We plan to include the code for our calculations and Shiny app, and the derived "red flag" data on Github. Our work is only a back-test, so we encourage others to subscribe to New Constructs API and their real time data to mine for future accounting troubles.
